# FAST-OAD

./: .codacy.yml  .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  MANIFEST.in  Pipfile  README.md  README.rst  codecov.yml  get_version.py  license-header.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  set_version.sh  setup.cfg  setup.py  tox.ini
.PyCharmRunConfs/: Panel serve.run.xml  Poetry install.run.xml  Template Python tests.run.xml  pytest all no-cov.run.xml  pytest integration no-cov.run.xml  pytest notebooks no-cov.run.xml  pytest units no-cov.run.xml  pytest units with coverage.run.xml  pytest units.run.xml  sphinx html doc build.run.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_for_Binder.yml  build_for_PyPI.yml  build_release.yml  extended_tests.yml  integration_tests.yml  minimum_tests.yml  pythonpackage.yml  test_suite.yml  tests.yml  unit_tests.yml  watchman_tests.yml
binder/: postBuild  requirements.txt
devutils/: license-upgrade.py  rename_vars.py  rename_vars.txt
docs/: Makefile  citation.rst  conf.py  index.rst  refs.bib  requirements.txt
docs/_static/: custom_admonitions.css
docs/_themes/pytorch_sphinx_theme/: __init__.py  fonts.html  layout.html  theme_variables.jinja
docs/directives/: list_segments.py  segment_attributes.py
docs/documentation/: add_modules.rst  calc_runner.rst  data.xml  index.rst  install.rst  overview.rst  usage.rst  variables.rst
docs/documentation/custom_modules/: add_modules.rst  add_plugin.rst  add_propulsion_module.rst  add_submodels.rst  add_variable_documentation.rst  index.rst
docs/documentation/mission_module/: index.rst  mission_module.rst
notebooks/tutorial/: .gitignore  postprocessing.ipynb  run_fastoad.ipynb  tutorial.ipynb
notebooks/tutorial/data/: CeRAS01_baseline.xml  oad_process.toml
notebooks/tutorial/outputs/: n2.html  oad_process_inputs.xml  oad_process_outputs.xml
release/: pyproject.toml
release/_fastoad/: __init__.py
runs/: conf_sellar.toml  run_sellar.bat
runs/custom_modules/: disc1.py  disc1_base.py  disc1bis.py  disc1bis_register.py  disc2.py  disc2_base.py  functions.py  functions_base.py  register_components.py
src/: conftest.py
src/fastoad/: __init__.py  activator.py  api.py  constants.py  exceptions.py  initialize_framework.py  plugins.py  register.py  run_app.py  testing.py
src/fastoad/_utils/: __init__.py  arrays.py  datacls.py  dicts.py  files.py  pandas.py  strings.py  testing.py  wrapt.py
src/fastoad/base/: __init__.py  dict.py  flight_point.py
src/fastoad/cmd/: api.py  calc_runner.py  cli.py  cli_utils.py  doe.py  exceptions.py  fast.py
src/fastoad/configurations/: cs25_base.yaml
src/fastoad/dashboard/: base.py
src/fastoad/gui/: Soutenance_Stage_De_Recherche.ipynb  __init__.py  analysis_and_plots.py  exceptions.py  mission_viewer.py  optimization_viewer.py  variable_viewer.py
src/fastoad/htmlcov/: __init___py.html  _utils___init___py.html  _utils_files_py.html  _utils_resource_management___init___py.html  _utils_resource_management_contents_py.html  _utils_resource_management_copy_py.html  _utils_resource_management_tests___init___py.html  _utils_resource_management_tests_resources___init___py.html  _utils_resource_management_tests_resources_subfolder___init___py.html  _utils_resource_management_tests_test_contents_py.html  _utils_resource_management_tests_test_copy_py.html  _utils_strings_py.html  _utils_testing_py.html  _utils_tests___init___py.html  _utils_tests_test_get_float_list_from_string_py.html  api_py.html  cmd___init___py.html  cmd_api_py.html  cmd_cli_py.html  cmd_cli_utils_py.html  cmd_exceptions_py.html  cmd_resources___init___py.html  cmd_tests___init___py.html  cmd_tests_data___init___py.html  cmd_tests_data_cmd_sellar_example___init___py.html  cmd_tests_data_cmd_sellar_example_disc1_base_py.html  cmd_tests_data_cmd_sellar_example_disc1_py.html  cmd_tests_data_cmd_sellar_example_disc2_base_py.html  cmd_tests_data_cmd_sellar_example_disc2_py.html  cmd_tests_data_cmd_sellar_example_functions_base_py.html  cmd_tests_data_cmd_sellar_example_functions_py.html  cmd_tests_data_cmd_sellar_example_sellar_py.html  cmd_tests_test_api_py.html  cmd_tests_test_cli_py.html  configurations___init___py.html  constants_py.html  exceptions_py.html  gui___init___py.html  gui_analysis_and_plots_py.html  gui_available_power_diagram___init___py.html  (+173 more)
src/fastoad/io/: __init__.py  configuration.py  formatter.py  serialize.py  variable_io.py
src/fastoad/mdao/: __init__.py  _utils.py  exceptions.py  problem.py  validity_checker.py  whatsopt.py
src/fastoad/model_base/: __init__.py  atmosphere.py  datacls.py  flight_point.py  (+2 more)
src/fastoad_app/: __init__.py  run_app.py
tests/: __init__.py  conftest.py  testing_utilities.py
tests/A321CEO_restitution/: reference_data.xml
tests/A321LR_replay/: reference_data.xml
tests/CeRAS_replay/: Bucket_curve.ipynb  Bucket_curve.py  CeRAS.ipynb  reference_data.xml
tests/Test_CRM/: CRM_aerostructure.py
tests/avl_exe/: get_avl.py  readme.md
tests/dummy_plugins/: README.md  base.py
tests/io/: test_configuration.py  test_custom_xml_openmdao_io.py  test_xml_openmdao_io.py  test_xpath_reader.py
tests/issue_319_test/: conf.yml  main_test.py  test.xml  test_comp.py
tests/memory_tests/: test_multiple_runs.py
tests/module_management/: test_background_pelix_framework.py  test_bundle_loader.py  test_openmdao_system_factory.py
tests/modules/: test_geometry.py  test_mass_breakdown.py
tests/mystran_exe/: get_mystran.py  readme.md
tests/oad_process/: register_components.py  test_oad_process.py
tests/openmdao/: test_checks.py  test_connections_utils.py  test_extractor.py  test_utils.py
tests/physics/: test_atmosphere.py
tests/sellar_example/: disc1.py  disc1_base.py  disc2_base.py  functions.py  functions_base.py  register_components.py  sellar.py
tests/xfoil_exe/: .gitignore  __init__.py  get_xfoil.py  readme.md
(+1966 files in other folders)
