[project]
name = "FAST-OAD"
description = "FAST-OAD is a framework for performing rapid Overall Aircraft Design"
version = "VERSION_PLACEHOLDER" # This value is replaced by poetry-dynamic-versioning during the build process. It is kept here to allow users to install the package with pip install . without using poetry.
readme = "README.md"
license = {text = "GPL-3.0-only"}
keywords = ["aircraft", "design", "multi-disciplinary"]
authors = [
    {name = "Christophe DAVID", email = "christophe.david@onera.fr"},
    {name = "Scott DELBECQ", email = "Scott.DELBECQ@isae-supaero.fr"}
]
maintainers = [
    {name = "Florent LUTZ", email = "Florent.LUTZ2@isae-supaero.fr"},
    {name = "Eric NGUYEN VAN", email = "Eric.Nguyen_Van@onera.fr"},
    {name = "Enrico STRAGIOTTI", email = "enrico.stragiotti@onera.fr"},
]

requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fast-oad-core = "^VERSION_PLACEHOLDER"
fast-oad-cs25 = ">=0.8.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9" # Used for the poetry export hook in pre-commit

# Dynamic versioning settings ==================================================
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

# Packaging system =============================================================
[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0"
]
build-backend = "poetry_dynamic_versioning.backend"
