[project]
name = "FAST-OAD"
description = "FAST-OAD is a framework for performing rapid Overall Aircraft Design"
readme = "README.md"
version = "VERSION_PLACEHOLDER" # This value is replaced by our CI routine during the build process.
license = { text = "GPL-3.0-only" }
keywords = [
    "aircraft",
    "design",
    "multi-disciplinary"
]
authors = [
    {name = "Christophe DAVID", email = "christophe.david@onera.fr"},
    {name = "Scott DELBECQ", email = "Scott.DELBECQ@isae-supaero.fr"}
]
maintainers = [
    {name = "Florent LUTZ", email = "Florent.LUTZ2@isae-supaero.fr"},
    {name = "Eric NGUYEN VAN", email = "Eric.Nguyen_Van@onera.fr"},
    {name = "Enrico STRAGIOTTI", email = "enrico.stragiotti@onera.fr"},
]
requires-python = ">=3.10,<3.15"


dependencies = [
    # IMPORTANT: when modifying this list, docs/requirements.txt must be updated for
    # ReadTheDocs to be able to compile the documentation.
    # A pre-commit hook has been added to do this task. As a result, any modification
    # of poetry.lock file will modify docs/requirements.txt and make
    # the commit fail because "files were modified by this hook". In that case,
    # doing again the commit including changes in docs/requirements.txt will succeed.
    "fast-oad-core>=VERSION_PLACEHOLDER",
    "fast-oad-cs25>=0.8.1"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
homepage = "https://github.com/fast-aircraft-design/FAST-OAD"
documentation = "https://fast-oad.readthedocs.io/en/stable/"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9" # Used for the poetry export hook in pre-commit

# Dynamic versioning settings ==================================================
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

# Packaging system =============================================================
[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0"
]
build-backend = "poetry_dynamic_versioning.backend"
